--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "./",
   "devDependencies": {
     "gh-pages": "^2.2.0",
     "homepage" : "http://vhfmatks.github.io/lol-position"
