--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-google-chart": "^0.1.2",
     "react-google-charts": "^3.0.15",
+    "react-load-script": "0.0.6",
     "react-scripts": "3.4.1",
     "rebass": "^4.0.7"
   },
