--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "axios-jsonp": "^1.0.4",
+    "cheerio": "^1.0.0-rc.3",
     "emotion-theming": "^10.0.27",
     "firebase": "^7.14.5",
     "react": "^16.13.1",
